@@ -74,7 +74,7 @@ import org.xml.sax.helpers.DefaultHandler;
 /*
  * @test
  * @library /javax/xml/jaxp/libs
- * @run testng/othervm -DrunSecMngr=true javax.xml.parsers.ptests.DocumentBuilderFactoryTest
+ * @run testng/othervm -DrunSecMngr=true -Djava.security.manager=allow javax.xml.parsers.ptests.DocumentBuilderFactoryTest
  * @run testng/othervm javax.xml.parsers.ptests.DocumentBuilderFactoryTest
  */
 @Listeners({jaxp.library.FilePolicy.class})
